@@ -1,4 +1,6 @@
 ver 0.21.11 (not yet released)
+* decoder
+  - wildmidi: log error if library initialization fails
 * output
   - alsa, osx: fix distortions with DSD_U32 and DoP on 32 bit CPUs
 * protocol
